--- a/popup/popup.css
+++ b/popup/popup.css
@@ -61,6 +61,7 @@ header h1 {
   height: 8px;
   background-color: #4CAF50;
   transition: width 0.5s;
+  border-radius: 5px;
 }
 
 /* Settings Section */
@@ -92,6 +93,17 @@ header h1 {
   transition: background-color 0.3s ease;
 }
 
+
+.footer {
+  font-size: 12px;
+  color: #999;
+  margin-top: 20px;
+}
+
+.footer a {
+  color: #28a745;
+}
+
 #start {
   background-color: #28a745;
   color: #fff;
@@ -113,4 +125,20 @@ header h1 {
 #stop:disabled {
   background-color: #f5c6cb;
   cursor: not-allowed;
+}
+
+
+.wave {
+  background: linear-gradient(90deg, #28a745, #85e085);
+  background-size: 200% 100%;
+  animation: waveEffect 2s linear infinite;
+}
+
+@keyframes waveEffect {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
+  }
 }
